--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,13 +12,14 @@
             font-family: 'Roboto', sans-serif;
             color: #ffffff;
             overflow: hidden;
-            background: linear-gradient(135deg, #2a0d4a, #3e1f68);
+            background: linear-gradient(145deg, #000000, #001eff);
             animation: backgroundAnimation 10s ease infinite;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             text-align: center;
+            position: relative;
         }
 
         @keyframes backgroundAnimation {
@@ -32,55 +32,78 @@
             z-index: 2;
             background: rgba(20, 20, 30, 0.9);
             padding: 40px;
-            border-radius: 15px;
+            border-radius: 20px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-            max-width: 500px;
-            width: 80%;
+            max-width: 600px;
+            width: 90%;
+            backdrop-filter: blur(10px);
+            opacity: 0;
+            transition: opacity 1s ease;
         }
 
-        img.profile-pic {
+        .hidden {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            font-size: 2em;
+            color: white;
+            font-weight: bold;
+            z-index: 10;
+        }
+
+        .profile-pic {
             border-radius: 50%;
-            width: 150px;
-            height: 150px;
+            width: 160px;
+            height: 160px;
             margin: 20px 0;
+            object-fit: cover;
+            border: 5px solid #ffffff;
         }
 
         h1 {
             font-size: 2.5em;
             margin: 10px 0;
+            color: #fff;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
 
         p {
             font-size: 1.2em;
             margin: 20px 0;
             white-space: pre-line;
+            color: #e0e0e0;
+            line-height: 1.5;
         }
 
         .button-container {
-            display: flex; 
-            justify-content: center; 
-            flex-wrap: wrap; 
-            margin-top: 20px; 
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 20px;
         }
 
         .button {
-            width: 70px; 
-            height: 70px; 
+            width: 80px;
+            height: 80px;
             margin: 10px;
-            background: rgba(0, 0, 0, 0.1); 
+            background: linear-gradient(145deg, #673ab7, #512da8);
             border: none;
-            border-radius: 10px; 
+            border-radius: 50%;
             cursor: pointer;
             outline: none;
-            transition: transform 0.3s, box-shadow 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
         .button img {
-            width: 40px; 
-            height: 40px; 
+            width: 40px;
+            height: 40px;
             filter: brightness(0) invert(1);
             transition: filter 0.3s;
         }
@@ -88,6 +111,7 @@
         .button:hover {
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
             transform: translateY(-5px);
+            background: linear-gradient(145deg, #512da8, #673ab7);
         }
 
         .button:hover img {
@@ -121,57 +145,71 @@
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
             transform: translateY(-5px);
         }
+
+        .mute-button:active img {
+            filter: brightness(1);
+        }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <img src="https://i.imghippo.com/files/3ELyS1727833990.webp" alt="Profile Picture" class="profile-pic">
-    <h1>rez</h1>
-    <p>hello im astral, 
-      im 14 years old,
-      i make mods for monkey game,
-      and i make really realistic gtag fan games!</p>
-    
-    <div class="button-container">
-        <button class="button" onclick="window.open('/twitterrez')">
-            <img src="https://img.icons8.com/color/48/000000/twitter.png" alt="Twitter">
-        </button>
-        <button class="button" onclick="window.open('https://github.com/azerioxfr')">
-            <img src="https://img.icons8.com/color/48/000000/github.png" alt="GitHub">
-        </button>
-        <button class="button" onclick="window.open('/soon')">
-            <img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord">
+    <div class="hidden" id="click-to-enter">
+        Click to Enter
+    </div>
+
+    <div class="container" id="profile-container">
+        <img src="https://i.imghippo.com/files/Mou6913cAk.png" alt="Profile Picture" class="profile-pic">
+        <h1>astral</h1>
+        <p>Hi, I'm Astral! I'm a 14-year-old game modder and creator. I make mods for a lot of games. I love making new game development projects and love to collab with other devs.</p>
+
+        <div class="button-container">
+            <button class="button" onclick="window.open('https://discord.com/users/797844342333112370')">
+                <img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord">
+            </button>
+        </div>
+
+        <audio id="background-audio" loop>
+            <source src="https://dl.sndup.net/5nr72/ddffghfdghg.mp3" type="audio/mpeg">
+        </audio>
+
+        <button class="mute-button" onclick="toggleMute()">
+            <img id="mute-icon" src="https://img.icons8.com/color/48/000000/mute.png" alt="Mute">
         </button>
     </div>
 
-    <audio id="background-audio" loop autoplay>
-        <source src="/files?name=timeless.mp3" type="audio/mpeg">
-    </audio>
-    
-    <button class="mute-button" onclick="toggleMute()">
-        <img id="mute-icon" src="https://img.icons8.com/color/48/000000/mute.png" alt="Mute">
-    </button>
-</div>
+    <script>
+        const audio = document.getElementById('background-audio');
+        let isMuted = false;
 
-<script>
-    const audio = document.getElementById('background-audio');
-    let isMuted = false;
-
-    function toggleMute() {
-        const muteIcon = document.getElementById('mute-icon');
-        if (isMuted) {
-            audio.volume = 1;
-            audio.play();
-            muteIcon.src = "https://img.icons8.com/color/48/000000/mute.png";
-            isMuted = false;
-        } else {
-            audio.volume = 0;
-            muteIcon.src = "https://img.icons8.com/color/48/000000/speaker.png";
-            isMuted = true;
+        // Function to toggle mute
+        function toggleMute() {
+            const muteIcon = document.getElementById('mute-icon');
+            if (isMuted) {
+                audio.volume = 1;
+                audio.play();
+                muteIcon.src = "https://img.icons8.com/color/48/000000/mute.png";
+                isMuted = false;
+            } else {
+                audio.volume = 0;
+                muteIcon.src = "https://img.icons8.com/color/48/000000/speaker.png";
+                isMuted = true;
+            }
         }
-    }
-</script>
+
+        // Function to play music
+        function playMusic() {
+            audio.play().catch(error => {
+                console.log("Error playing audio:", error);
+            });
+        }
+
+        // Function to reveal the content when clicked
+        document.getElementById('click-to-enter').addEventListener('click', function() {
+            document.getElementById('click-to-enter').style.display = 'none'; // Hide the "Click to Enter" text
+            document.getElementById('profile-container').style.opacity = 1; // Show the content
+            playMusic(); // Start the background music
+        });
+    </script>
 
 </body>
 </html>
