--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <audio id="background-audio" loop>
-            <source src="https://dl.sndup.net/5nr72/ddffghfdghg.mp3" type="audio/mpeg">
+            <source src="music.mp3" type="audio/mpeg">
         </audio>
 
         <button class="mute-button" onclick="toggleMute()">
