--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
         </button>
     </div>
 
+    <div class="footer">
+        dm me if yo want a profile page
+    </div>
+
     <script>
         const audio = document.getElementById('background-audio');
         const video = document.getElementById('background-video');
