--- a/index.html
+++ b/index.html
@@ -153,6 +153,25 @@
         .mute-button:active img {
             filter: brightness(1);
         }
+
+        .footer {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            text-align: center;
+            font-size: 1em;
+            color: #e0e0e0;
+            font-weight: bold;
+        }
+
+        .footer a {
+            color: #673ab7;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -169,10 +188,10 @@
     <div class="container" id="profile-container">
         <img src="https://i.imghippo.com/files/Mou6913cAk.png" alt="Profile Picture" class="profile-pic">
         <h1>astral</h1>
-        <p>Hi, I'm Astral! I'm a 14-year-old game modder and creator. I make mods for a lot of games. I love making new game development projects and love to collab with other devs.</p>
+        <p>dm me if yo want a profile page</p>
 
         <div class="button-container">
-            <button class="button" onclick="window.open('https://discord.com/users/797844342333112370')">
+            <button class="button" onclick="window.open('https://discord.com/users/1163266507988545606')">
                 <img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord">
             </button>
         </div>
@@ -187,7 +206,7 @@
     </div>
 
     <div class="footer">
-        dm me if yo want a profile page
+        made by astral! my page: <a href="https://astralopgt.github.io" target="_blank">astralopgt.github.io</a>
     </div>
 
     <script>
