--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="container" id="profile-container">
         <img src="https://i.imghippo.com/files/Mou6913cAk.png" alt="Profile Picture" class="profile-pic">
         <h1>astral</h1>
-        <p>dm me if yo want a profile page</p>
+        <p>Hi, I'm Astral! I'm a 14-year-old game modder and creator. I make mods for a lot of games. I love making new game development projects and love to collab with other devs.</p>
 
         <div class="button-container">
             <button class="button" onclick="window.open('https://discord.com/users/1163266507988545606')">
@@ -206,7 +206,7 @@
     </div>
 
     <div class="footer">
-        made by astral! my page: <a href="https://astralopgt.github.io" target="_blank">astralopgt.github.io</a>
+        dm me if yo want a profile page
     </div>
 
     <script>
