--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
 
     <div class="footer">
-        dm me if yo want a profile page
+        dm me if you want a profile page
     </div>
 
     <script>
