--- a/index.html
+++ b/index.html
@@ -2,246 +2,149 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>astral</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Emperor</title>
+    <link rel="icon" type="image/x-icon" href="Assets/images/LogoRounded.png">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="Assets/js/title.js"></script>
+    <link href="Assets/css/styles.css" rel="stylesheet">
+    <link href="Assets/css/particles.css" media="screen" rel="stylesheet">
+    <link href="Assets/css/Nav.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://univevip.github.io/cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            color: #ffffff;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            position: relative;
+            cursor: url('Assets/images/custom-cursor.cur'), auto;
         }
 
-        .background-video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-            display: none;
+        a, button, input, textarea {
+            cursor: url('Assets/images/custom-cursor.cur'), auto;
         }
-
-        .container {
-            position: relative;
-            z-index: 2;
-            background: rgba(20, 20, 30, 0.2);
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-            max-width: 600px;
-            width: 90%;
-            backdrop-filter: blur(10px);
-            opacity: 0;
-            transition: opacity 1s ease;
-        }
-
-        .hidden {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: rgba(0, 0, 0, 1);
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            font-size: 2em;
-            color: white;
-            font-weight: bold;
-            z-index: 10;
-        }
-
-        .profile-pic {
-            border-radius: 50%;
-            width: 160px;
-            height: 160px;
-            margin: 20px 0;
-            object-fit: cover;
-            border: 5px solid #ffffff;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin: 10px 0;
-            color: #fff;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-        }
-
-        p {
-            font-size: 1.2em;
-            margin: 20px 0;
-            white-space: pre-line;
-            color: #e0e0e0;
-            line-height: 1.5;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        .button {
-            width: 80px;
-            height: 80px;
-            margin: 10px;
-            background: linear-gradient(145deg, #673ab7, #512da8);
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            outline: none;
-            transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .button img {
-            width: 40px;
-            height: 40px;
-            filter: brightness(0) invert(1);
-            transition: filter 0.3s;
-        }
-
-        .button:hover {
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-            transform: translateY(-5px);
-            background: linear-gradient(145deg, #512da8, #673ab7);
-        }
-
-        .button:hover img {
-            filter: brightness(1);
-        }
-
-        .mute-button {
+		
+		/* background-color: #181a1b; */
+        .achivnoti {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 70px;
-            height: 70px;
-            background: rgba(0, 0, 0, 0.1);
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            outline: none;
-            transition: transform 0.3s, box-shadow 0.3s;
+            top: 100px;
+            left: 10px;
+            background-color: #000;
+            color: #00FFFF;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 255, 255, 0.5);
+            font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
             align-items: center;
+            z-index: 1000;
+            opacity: 0;
+            transition: opacity 0.5s ease;
         }
 
-        .mute-button img {
-            width: 40px;
-            height: 40px;
-            filter: brightness(0) invert(0.5);
-        }
-
-        .mute-button:hover {
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-            transform: translateY(-5px);
-        }
-
-        .mute-button:active img {
-            filter: brightness(1);
-        }
-
-        .footer {
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            text-align: center;
-            font-size: 1em;
-            color: #e0e0e0;
+        .remnoti {
+            background: none;
+            border: none;
+            color: #00FFFF;
+            font-size: 20px;
             font-weight: bold;
-        }
-
-        .footer a {
-            color: #673ab7;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
+            margin-left: 15px;
+            cursor: pointer;
+            transition: color 0.3s ease;
         }
     </style>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Emperor</a>
+        <nav>
+            <a href="index.html" class="active">Home</a>
+            <a href="https://discord.gg/XnU8vBzAvK" class="active">Discord</a>
+            <a href="skids.html" class="active">Skids</a>
+        </nav>
+    </header>
 
-    <video class="background-video" id="background-video" loop muted>
-        <source src="background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <div class="hidden" id="click-to-enter">
-        enter
-    </div>
-
-    <div class="container" id="profile-container">
-        <img src="https://i.imghippo.com/files/Mou6913cAk.png" alt="Profile Picture" class="profile-pic">
+    <div class="center">
         <h1>astral</h1>
-        <p>Hi, I'm Astral! I'm a 14-year-old game modder and creator. I make mods for a lot of games. I love making new game development projects and love to collab with other devs.</p>
-
-        <div class="button-container">
-            <button class="button" onclick="window.open('https://discord.com/users/1163266507988545606')">
-                <img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord">
-            </button>
-        </div>
-
-        <audio id="background-audio" loop>
-            <source src="music.mp3" type="audio/mpeg">
-        </audio>
-
-        <button class="mute-button" onclick="toggleMute()">
-            <img id="mute-icon" src="https://img.icons8.com/color/48/000000/mute.png" alt="Mute">
-        </button>
+        <p1><span class="auto-type"></span></p1>
     </div>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 
-    <div class="footer">
-        dm me if you want a profile page
-    </div>
+<audio id="welcome-sound" src="Assets/sounds/welcome.mp3" preload="auto" loop></audio>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <div id="particles-js"></div>
+    <script src="Assets/js/particles.js"></script>
+    <script src="Assets/js/app.js"></script>
 
     <script>
-        const audio = document.getElementById('background-audio');
-        const video = document.getElementById('background-video');
-        let isMuted = false;
+        var audio = document.getElementById('welcome-sound');
+        audio.volume = 0.2;
 
-        function toggleMute() {
-            const muteIcon = document.getElementById('mute-icon');
-            if (isMuted) {
-                audio.volume = 1;
-                audio.play();
-                muteIcon.src = "https://img.icons8.com/color/48/000000/mute.png";
-                isMuted = false;
+        var typed = new Typed(".auto-type", {
+            strings: ["Forever undetected.", "#1 cheat provider", "emperor > all."],
+            typeSpeed: 85,
+            backSpeed: 85,
+            backDelay: 700,
+            smartBackspace: true,
+            loop: true,
+        });
+
+        function toggleAudio(event) {
+            if (event.target.tagName === 'BUTTON' || event.target.tagName === 'A') {
+                return;
+            }
+            if (audio.paused) {
+                audio.play().catch(function(error) {
+                    console.log('🤓🤓🤓', error);
+                });
             } else {
-                audio.volume = 0;
-                muteIcon.src = "https://img.icons8.com/color/48/000000/speaker.png";
-                isMuted = true;
+                audio.pause();
             }
         }
 
-        function playMusic() {
-            audio.play().catch(error => {
-                console.log("Error playing audio:", error);
-            });
-        }
+	document.addEventListener('click', toggleAudio);
 
-        document.getElementById('click-to-enter').addEventListener('click', function() {
-            document.getElementById('click-to-enter').style.display = 'none';
-            document.getElementById('profile-container').style.opacity = 1;
-            video.style.display = 'block';
-            video.play();
-            playMusic();
+																																																																																																																																																																																																																																																																																																																																							document.addEventListener('contextmenu', function(event) {
+																																																																																																																																																																																																																																																																																																																																								event.preventDefault();
+																																																																																																																																																																																																																																																																																																																																								window.open('https://discord.gg/XnU8vBzAvK', '_blank');
+																																																																																																																																																																																																																																																																																																																																							});
+
+																																																																																																																																																																																																																																																																																																																																							document.addEventListener('keydown', function(event) {
+																																																																																																																																																																																																																																																																																																																																								if (event.ctrlKey && event.key === 's') {
+																																																																																																																																																																																																																																																																																																																																									event.preventDefault();
+																																																																																																																																																																																																																																																																																																																																									window.open('https://discord.gg/XnU8vBzAvK', '_blank');
+																																																																																																																																																																																																																																																																																																																																								}
+																																																																																																																																																																																																																																																																																																																																								if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+																																																																																																																																																																																																																																																																																																																																									event.preventDefault();
+																																																																																																																																																																																																																																																																																																																																									window.open('https://discord.gg/XnU8vBzAvK', '_blank');
+																																																																																																																																																																																																																																																																																																																																								}
+																																																																																																																																																																																																																																																																																																																																								if (event.key === 'F12') {
+																																																																																																																																																																																																																																																																																																																																									event.preventDefault();
+																																																																																																																																																																																																																																																																																																																																									window.open('https://discord.gg/XnU8vBzAvK', '_blank');
+																																																																																																																																																																																																																																																																																																																																								}
+	});
+</script>
+	
+	
+
+    <div id="achivnoti" class="achivnoti">
+        <p>Congrats, You have reached the #1 Cheat Provider</p>
+        <button id="remnoti" class="remnoti">&times;</button>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var closeBtn = document.getElementById('remnoti');
+            var notification = document.getElementById('achivnoti');
+
+            function showNoti() {
+                setTimeout(function() {
+                    notification.style.opacity = '1';
+                }, 2000);
+            }
+
+            showNoti();
+
+            closeBtn.addEventListener('click', function() {
+                notification.style.opacity = '0';
+            });
         });
     </script>
-
 </body>
 </html>
