--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Emperor</a>
+        <a href="#" class="logo">astral</a>
         <nav>
             <a href="index.html" class="active">Home</a>
-            <a href="https://discord.gg/XnU8vBzAvK" class="active">Discord</a>
-            <a href="skids.html" class="active">Skids</a>
+            <a href="https://discord.gg/Bpd8XH88n4" class="active">Discord</a>
+            <a href="skids.html" class="active">Socials</a>
         </nav>
     </header>
 
@@ -77,7 +77,7 @@
         audio.volume = 0.2;
 
         var typed = new Typed(".auto-type", {
-            strings: ["Forever undetected.", "#1 cheat provider", "emperor > all."],
+            strings: ["tbh.gov on dc", "i do c#", "unity dev"],
             typeSpeed: 85,
             backSpeed: 85,
             backDelay: 700,
@@ -124,7 +124,7 @@
 	
 
     <div id="achivnoti" class="achivnoti">
-        <p>Congrats, You have reached the #1 Cheat Provider</p>
+        <p>add if 10+ mutuals on dc</p>
         <button id="remnoti" class="remnoti">&times;</button>
     </div>
 
