--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Emperor</title>
+    <title>astral</title>
     <link rel="icon" type="image/x-icon" href="Assets/images/LogoRounded.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="Assets/js/title.js"></script>
@@ -19,7 +19,6 @@
             cursor: url('Assets/images/custom-cursor.cur'), auto;
         }
 		
-		/* background-color: #181a1b; */
         .achivnoti {
             position: fixed;
             top: 100px;
@@ -60,7 +59,7 @@
     </header>
 
     <div class="center">
-        <h1>Emperor</h1>
+        <h1>astral</h1>
         <p1><span class="auto-type"></span></p1>
     </div>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
@@ -77,7 +76,7 @@
         audio.volume = 0.2;
 
         var typed = new Typed(".auto-type", {
-            strings: ["tbh.gov on dc", "i do c#", "unity dev"],
+            strings: ["i do c#", "unity dev"],
             typeSpeed: 85,
             backSpeed: 85,
             backDelay: 700,
