--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>astral</title>
+    <title>Twin Starzz</title>
     <link rel="icon" type="image/x-icon" href="Assets/images/LogoRounded.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="Assets/js/title.js"></script>
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">astral</a>
+        <a href="#" class="logo">Twin Starzz</a>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="https://discord.gg/Bpd8XH88n4" class="active">Discord</a>
@@ -59,7 +59,7 @@
     </header>
 
     <div class="center">
-        <h1>astral</h1>
+        <h1>Twin Starzz</h1>
         <p1><span class="auto-type"></span></p1>
     </div>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
@@ -76,7 +76,7 @@
         audio.volume = 0.2;
 
         var typed = new Typed(".auto-type", {
-            strings: ["i do c#", "unity dev"],
+            strings: ["high quality clothing", "333"],
             typeSpeed: 85,
             backSpeed: 85,
             backDelay: 700,
@@ -123,7 +123,7 @@
 	
 
     <div id="achivnoti" class="achivnoti">
-        <p>add if 10+ mutuals on dc</p>
+        <p>Announcement: new drops incoming</p>
         <button id="remnoti" class="remnoti">&times;</button>
     </div>
 
