--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <a href="#" class="logo">Twin Starzz</a>
         <nav>
             <a href="index.html" class="active">Home</a>
-            <a href="https://discord.gg/Bpd8XH88n4" class="active">Discord</a>
-            <a href="skids.html" class="active">Socials</a>
+            <a href="shop.html" class="active">Shop</a>
         </nav>
     </header>
 
