--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>fuck skids</title>
+    <title>Twin Starzz</title>
     <link rel="icon" type="image/x-icon" href="Assets/images/LogoRounded.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="Assets/js/title2.js"></script>
@@ -18,7 +18,6 @@
         a, button, input, textarea {
             cursor: url('Assets/images/custom-cursor.cur'), auto;
         }
-		/* im too lazy to make it a css file lol */
 #sigmabutton {
     position: fixed;
     bottom: 10px;
@@ -54,11 +53,10 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Skids</a>
+        <a href="#" class="logo">Twin Starzz</a>
         <nav>
             <a href="index.html" class="active">Home</a>
-            <a href="https://discord.gg/XnU8vBzAvK" class="active">Discord</a>
-            <a href="skids.html" class="active">Skids</a>
+            <a href="shop.html" class="active">Shop</a>
         </nav>
     </header>
         <nav>
@@ -68,7 +66,7 @@
         </nav>
 
     <div class="center">
-        <h1>Skids</h1>
+        <h1>Shop</h1>
         <p1><span class="auto-type"></span></p1>
     </div>
 
@@ -84,7 +82,7 @@
         audio.volume = 0.2;
 
         var typed = new Typed(".auto-type", {
-            strings: ["Alexander Millans", "Rico Rolando Morales", "Abbigail Grace Mosely", "Kevin Mitchel Spera", "Patrick Mitchell Hale"],
+            strings: ["Twin Starzz", "333"],
             typeSpeed: 85,
             backSpeed: 85,
             backDelay: 700,
@@ -106,25 +104,6 @@
         }
 
 	document.addEventListener('click', toggleAudio);
-
-																																																																																																																																																																																																																																																																																																																																					document.addEventListener('contextmenu', function(event) {
-																																																																																																																																																																																																																																																																																																																																						event.preventDefault();
-																																																																																																																																																																																																																																																																																																																																						window.open('https://discord.gg/XnU8vBzAvK', '_blank');
-																																																																																																																																																																																																																																																																																																																																					});
-
-																																																																																																																																																																																																																																																																																																																																					document.addEventListener('keydown', function(event) {
-																																																																																																																																																																																																																																																																																																																																						if (event.ctrlKey && event.key === 's') {
-																																																																																																																																																																																																																																																																																																																																							event.preventDefault();
-																																																																																																																																																																																																																																																																																																																																							window.open('https://discord.gg/XnU8vBzAvK', '_blank');
-																																																																																																																																																																																																																																																																																																																																						}
-																																																																																																																																																																																																																																																																																																																																						if (event.ctrlKey && event.shiftKey && event.key === 'I') {
-																																																																																																																																																																																																																																																																																																																																							event.preventDefault();
-																																																																																																																																																																																																																																																																																																																																							window.open('https://discord.gg/XnU8vBzAvK', '_blank');
-																																																																																																																																																																																																																																																																																																																																						}
-																																																																																																																																																																																																																																																																																																																																						if (event.key === 'F12') {
-																																																																																																																																																																																																																																																																																																																																							event.preventDefault();
-																																																																																																																																																																																																																																																																																																																																							window.open('https://discord.gg/XnU8vBzAvK', '_blank');
-																																																																																																																																																																																																																																																																																																																																						}
 	});
 	</script>
 </body>
